{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 23,
  "lineage": "e01db7f0-e33a-6285-c0be-5195399b2a28",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb22305f6bd81b7e",
            "arn": "arn:aws:ec2:ap-south-1:772149515781:elastic-ip/eipalloc-0cb22305f6bd81b7e",
            "domain": "vpc",
            "id": "eipalloc-0cb22305f6bd81b7e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-188-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.188.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-eip",
              "ResourceType": "EIP"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-eip",
              "ResourceType": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:internet-gateway/igw-0542e50d50c8dae6d",
            "id": "igw-0542e50d50c8dae6d",
            "owner_id": "772149515781",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-igw",
              "ResourceType": "IGW"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-igw",
              "ResourceType": "IGW"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb22305f6bd81b7e",
            "association_id": "eipassoc-04c06ed9344ff71c5",
            "connectivity_type": "public",
            "id": "nat-00510eff5c0d566b3",
            "network_interface_id": "eni-00a0670fa92520628",
            "private_ip": "10.20.0.141",
            "public_ip": "3.109.188.236",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027ba52f1d068062d",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-natgw",
              "ResourceType": "NATGW"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-natgw",
              "ResourceType": "NATGW"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02539c07e0b97f3721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00510eff5c0d566b3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02539c07e0b97f372",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:route-table/rtb-02539c07e0b97f372",
            "id": "rtb-02539c07e0b97f372",
            "owner_id": "772149515781",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-private-rt",
              "ResourceType": "RT"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-private-rt",
              "ResourceType": "RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:route-table/rtb-0eb600020e7e1b3bd",
            "id": "rtb-0eb600020e7e1b3bd",
            "owner_id": "772149515781",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0542e50d50c8dae6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-rt",
              "ResourceType": "RT"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-rt",
              "ResourceType": "RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.20.10.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024a9caae19595cac",
            "route_table_id": "rtb-02539c07e0b97f372",
            "subnet_id": "subnet-0b1726c34ae054883"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.8.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08793a80a9a2a34b5",
            "route_table_id": "rtb-02539c07e0b97f372",
            "subnet_id": "subnet-01e5e7f032b6f8fd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.9.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff0adc22f7bb0dc",
            "route_table_id": "rtb-02539c07e0b97f372",
            "subnet_id": "subnet-098d0affedbb57ffb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.20.0.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f33bc1981b9a4f1a",
            "route_table_id": "rtb-0eb600020e7e1b3bd",
            "subnet_id": "subnet-027ba52f1d068062d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe1e0d2af51cba1d",
            "route_table_id": "rtb-0eb600020e7e1b3bd",
            "subnet_id": "subnet-06826a5deaab9e993"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcfe566dd7e8b63",
            "route_table_id": "rtb-0eb600020e7e1b3bd",
            "subnet_id": "subnet-0fd2b0740c17081ee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.20.10.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-0b1726c34ae054883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1726c34ae054883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-c",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "tags_all": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-c",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.8.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-01e5e7f032b6f8fd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e5e7f032b6f8fd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-a",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "tags_all": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-a",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.9.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-098d0affedbb57ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098d0affedbb57ffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-b",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "tags_all": {
              "Developer": "HealthCare",
              "Environment": "dev",
              "Name": "dev-Afz-private-b",
              "Project": "Afzaal",
              "ResourceType": "SUBNET",
              "kubernetes.io/cluster/dev-Afz-cluster": "shared"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.20.0.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-027ba52f1d068062d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027ba52f1d068062d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-a",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-a",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-06826a5deaab9e993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06826a5deaab9e993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-b",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-b",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        },
        {
          "index_key": "10.20.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:subnet/subnet-0fd2b0740c17081ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2b0740c17081ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772149515781",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-c",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-public-c",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-04b2219d3571e9805"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:772149515781:vpc/vpc-04b2219d3571e9805",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/20",
            "default_network_acl_id": "acl-0352a8369a5d8f517",
            "default_route_table_id": "rtb-0dff52787601fef0f",
            "default_security_group_id": "sg-004982a4a70e064eb",
            "dhcp_options_id": "dopt-0c4734688ac651137",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b2219d3571e9805",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dff52787601fef0f",
            "owner_id": "772149515781",
            "tags": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-vpc",
              "ResourceType": "VPC"
            },
            "tags_all": {
              "Client": "HealthCare",
              "Developer": "Afzaal",
              "Environment": "dev",
              "Name": "dev-Afz-vpc",
              "ResourceType": "VPC"
            }
          }
        }
      ]
    }
  ]
}